tests/derive_compile_fail/non_gc_safe.stderr
error[E0277]: the trait bound `NotGcSafe: GcSafe` is not satisfied
  --> tests/derive_compile_fail/non_gc_safe.rs:9:10
   |
9  | #[derive(Scan)]
   |          ^^^^ expected an implementor of trait `GcSafe`
   |
note: required by a bound in `check_gc_safe`
  --> src/plumbing.rs:16:25
   |
16 | pub fn check_gc_safe<T: GcSafe>(_: &T) {}
   |                         ^^^^^^ required by this bound in `check_gc_safe`
   = note: this error originates in the derive macro `Scan` (in Nightly builds, run with -Z macro-backtrace for more info)
